[package]
name = "balance-robot2"
version = "0.1.0"
authors = ["Satoshi Tanaka <overthere555@gmail.com>"]
license = "MIT"
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
embedded-hal = "1.0.0-alpha.9"
embedded-svc = { version = "0.24.0", default-futures = false }
mpu6050 = { git = "https://github.com/tana/mpu6050", branch = "mpu6886" }
nalgebra = { version = "0.31.4", default-features = false, features = ["macros"] }

[build-dependencies]
embuild = "0.30.4"
anyhow = "1"